--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     <script src="./js/cell.js"></script>
+    <script src="./js/nqueenssolver.js"></script>
     <script src="./js/app.js"></script>
     <style>
         #defaultCanvas0 {
