variable board size selection through QuickSettings

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <title>p5 Maze Demo</title>
+    <title>p5 N-Queens Problem Solver</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/quicksettings/latest/quicksettings.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
     <script src="./js/cell.js"></script>
     <script src="./js/nqueenssolver.js"></script>
